# ImageAll

./: .gitattributes  .gitignore  AGENTS.md
ImageAll/: ImageAll.entitlements  Info.plist
ImageAll.xcodeproj/: project.pbxproj
ImageAllTests/: CompositionRootTests.swift  LibraryWorkspaceModelTests.swift
ModelBackend/: .gitignore  README.md  pyproject.toml
ModelBackend/fixtures/standard-admission/: places365-resnet18-research-v1.json
ModelBackend/fixtures/standard-scene-pack-v1/: manifest.json  mapping.json  ontology.json  policy.json
ModelBackend/fixtures/standard-scene-pack-v1/LICENSES/: model.txt
ModelBackend/fixtures/standard-scene-pack-v1/models/: scene-linear.json
ModelBackend/research/: README.md
ModelBackend/research/inputs/places365/20260720T020727Z/: curl-metadata.txt  resnet18_places365.pth.tar.sha256  response-headers.txt  system-info.txt
ModelBackend/research/manifests/: places365-public-validation-20260720.json  places365-resnet18-official-weight-20260720.json
ModelBackend/src/imageall_model_backend/: __init__.py  cli.py  coreml_cli.py  coreml_export.py  coreml_install.py  coreml_install_cli.py  coreml_resource_benchmark.py  coreml_resource_benchmark_cli.py  coreml_trace_evidence.py  coreml_trace_evidence_cli.py  dinov2.py  embedding_cache.py  personal_cli.py  personal_runtime.py  personal_suggestions.py  personal_training.py  providers.py  rgb_linear.py  service.py  service_startup_evidence.py  service_startup_evidence_cli.py  standard_admission.py  standard_admission_cli.py  standard_pack.py  standard_pack_cli.py  standard_suggestions.py  training.py
ModelBackend/tests/: test_cli.py  test_coreml_cli.py  test_coreml_export.py  test_coreml_install.py  test_coreml_provider.py  test_coreml_resource_benchmark_cli.py  test_coreml_trace_evidence_cli.py  test_dinov2_provider.py  test_embedding_cache.py  test_personal_runtime.py  test_personal_suggestions.py  test_personal_training_input.py  test_service.py  test_service_startup_evidence.py  test_standard_admission_cli.py  test_standard_pack.py  test_standard_pack_cli.py  test_standard_suggestions.py  test_training.py
docs/: ADR-041-EXPANDED-MEDIA-DECODE.md  ARCHITECTURE.md  CURSOR-STAGE-0-HANDOFF.md  CURSOR-STAGE-0-SLICE-2-HANDOFF.md  CURSOR-STAGE-0-SLICE-3-HANDOFF.md  CURSOR-STAGE-0-SLICE-4-HANDOFF.md  CURSOR-STAGE-0-SLICE-5-HANDOFF.md  CURSOR-STAGE-0-SLICE-6-HANDOFF.md  CURSOR-STAGE-1-SLICE-1-HANDOFF.md  DEVELOPMENT-GATES-2026-07-20.md  (+22 more)
(+268 files in other folders)
