[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "imageall-model-backend"
version = "0.1.0"
description = "Optional local model service for ImageAll"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=2,<3",
  "pillow>=11,<13",
  "pydantic>=2.10,<3",
  "torch>=2.7,<3",
  "transformers>=4.56,<5",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
]

[project.scripts]
imageall-model-backend = "imageall_model_backend.cli:main"
imageall-train-personal = "imageall_model_backend.personal_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/imageall_model_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "model_smoke: downloads and runs a pinned production model",
]
