[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "imageall-model-backend"
version = "0.1.0"
description = "Optional local model service for ImageAll"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=2,<3",
  "pillow>=11,<13",
  "pydantic>=2.10,<3",
  "torch==2.7.0",
  "transformers>=4.56,<5",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
coreml = [
  "coremltools>=9,<10; sys_platform == 'darwin'",
]
test = [
  "coremltools>=9,<10; sys_platform == 'darwin'",
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
]

[project.scripts]
imageall-model-backend = "imageall_model_backend.cli:main"
imageall-convert-coreml = "imageall_model_backend.coreml_cli:main"
imageall-train-personal = "imageall_model_backend.personal_cli:main"
imageall-validate-standard-pack = "imageall_model_backend.standard_pack_cli:main"
imageall-verify-standard-admission = "imageall_model_backend.standard_admission_cli:main"
imageall-verify-coreml-trace = "imageall_model_backend.coreml_trace_evidence_cli:main"
imageall-benchmark-coreml-resources = "imageall_model_backend.coreml_resource_benchmark_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/imageall_model_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "coreml_smoke: downloads, converts, and benchmarks the pinned production model",
  "model_smoke: downloads and runs a pinned production model",
]
